[package]
name = "hyper-rustls"
version = "0.25.0"
edition = "2021"
rust-version = "1.63"
license = "Apache-2.0 OR ISC OR MIT"
readme = "README.md"
description = "Rustls+hyper integration for pure rust HTTPS"
homepage = "https://github.com/rustls/hyper-rustls"
repository = "https://github.com/rustls/hyper-rustls"
documentation = "https://docs.rs/hyper-rustls/"

[dependencies]
http = "0.2"
hyper = { version = "0.14", git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.28", default-features = false, features = [
    "client",
] }
log = { version = "0.4.4", optional = true }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-native-certs = { version = "0.6", git = "https://github.com/wasix-org/rustls-native-certs.git", branch = "main", optional = true }
rustls = { version = "0.22.2", git = "https://github.com/wasix-org/rustls.git", branch = "v0.22.2", default-features = false }
tokio = { version = "=1.35.1", git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.35.1" }
tokio-rustls = { git = "https://github.com/wasix-org/tokio-rustls.git", branch = "0.25.0", version = "0.25.0", default-features = false }
webpki-roots = { git = "https://github.com/wasix-org/webpki-roots.git", branch = "v0.25.2", version = "0.25.2", optional = true }
futures-util = { version = "0.3", default-features = false }

[dev-dependencies]
futures-util = { version = "0.3.1", default-features = false }
hyper = { version = "0.14", git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.28", default-features = false, features = [
    "full",
] }
rustls = { version = "0.22.2", git = "https://github.com/wasix-org/rustls.git", branch = "v0.22.2", default-features = false, features = [
    "tls12",
] }
rustls-pemfile = "2"
tokio = { version = "=1.35.1", git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.35.1", features = [
    "io-std",
    "fs",
    "macros",
    "net",
    "rt-multi-thread",
] }

[features]
default = ["native-tokio", "http1", "tls12", "logging", "acceptor", "ring"]
acceptor = ["hyper/server", "ring", "tokio-runtime"]
http1 = ["hyper/http1"]
http2 = ["hyper/http2"]
webpki-tokio = ["tokio-runtime", "webpki-roots"]
native-tokio = ["tokio-runtime", "rustls-native-certs"]
ring = ["rustls/ring"]
tokio-runtime =  ["hyper/runtime"]
tls12 = ["tokio-rustls/tls12", "rustls/tls12"]
logging = ["log", "tokio-rustls/logging", "rustls/logging"]

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["native-tokio", "http1"]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["tokio-runtime", "acceptor"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
